WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307929
UI Process may hang due to deadlock during rubber banding
https://bugs.webkit.org/show_bug.cgi?id=307929
Summary
UI Process may hang due to deadlock during rubber banding
Lily Spiniolas
Reported
2026-02-14 20:49:40 PST
rdar://170410132
Attachments
Add attachment
proposed patch, testcase, etc.
Lily Spiniolas
Comment 1
2026-02-14 23:59:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58747
EWS
Comment 2
2026-02-16 14:27:52 PST
Committed
307664@main
(a35aafeca7bc): <
https://commits.webkit.org/307664@main
> Reviewed commits have been landed. Closing PR #58747 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug