Source/WebKit/UIProcess/RemoteLayerTree/mac/RemoteLayerTreeEventDispatcher.mm
@@ -468,32 +468,37 @@ void RemoteLayerTreeEventDispatcher::didRefreshDisplay(PlatformDisplayID display
     }
 #endif
 
-    Locker locker { m_scrollingTreeLock };
+    auto needsAnimationUpdate = false;
+    {
+        Locker locker { m_scrollingTreeLock };
 
-    auto now = MonotonicTime::now();
-    m_lastDisplayDidRefreshTime = now;
+        auto now = MonotonicTime::now();
+        m_lastDisplayDidRefreshTime = now;
 
-    scrollingTree->displayDidRefresh(displayID);
+        scrollingTree->displayDidRefresh(displayID);
 
-    if (m_state != SynchronizationState::Idle) {
-        scrollingTree->tryToApplyLayerPositions();
+        if (m_state != SynchronizationState::Idle) {
+            scrollingTree->tryToApplyLayerPositions();
+            needsAnimationUpdate = true;
+        }
+
+        switch (m_state) {
+        case SynchronizationState::Idle: {
+            m_state = SynchronizationState::WaitingForRenderingUpdate;
+            constexpr auto maxStartRenderingUpdateDelay = 1_ms;
+            scheduleDelayedRenderingUpdateDetectionTimer(maxStartRenderingUpdateDelay);
+            break;
+        }
+        case SynchronizationState::WaitingForRenderingUpdate:
+        case SynchronizationState::InRenderingUpdate:
+        case SynchronizationState::Desynchronized:
+            break;
+        }
+    }
 #if ENABLE(THREADED_ANIMATIONS)
+    if (needsAnimationUpdate)
         updateAnimations();
 #endif
-    }
-
-    switch (m_state) {
-    case SynchronizationState::Idle: {
-        m_state = SynchronizationState::WaitingForRenderingUpdate;
-        constexpr auto maxStartRenderingUpdateDelay = 1_ms;
-        scheduleDelayedRenderingUpdateDetectionTimer(maxStartRenderingUpdateDelay);
-        break;
-    }
-    case SynchronizationState::WaitingForRenderingUpdate:
-    case SynchronizationState::InRenderingUpdate:
-    case SynchronizationState::Desynchronized:
-        break;
-    }
 }
 
 void RemoteLayerTreeEventDispatcher::scheduleDelayedRenderingUpdateDetectionTimer(Seconds delay)
@@ -607,11 +612,11 @@ void RemoteLayerTreeEventDispatcher::renderingUpdateComplete()
 {
     ASSERT(isMainRunLoop());
 
-    Locker locker { m_scrollingTreeLock };
-
 #if ENABLE(THREADED_ANIMATIONS)
     updateAnimations();
 #endif
+
+    Locker locker { m_scrollingTreeLock };
 
     if (m_state == SynchronizationState::InRenderingUpdate)
         m_stateCondition.notifyOne();
